Fix header top on mobiles

--- a/assets/scss/components/site-header/_mobile.scss
+++ b/assets/scss/components/site-header/_mobile.scss
@@ -7,6 +7,7 @@
     overflow-y: auto;
 
     position: fixed;
+    top: 0;
     bottom: 0;
     left: 0;
     z-index: 1000;
