--- a/style-rtl.css
+++ b/style-rtl.css
@@ -1637,6 +1637,7 @@ ul.menu,
     display: none;
     overflow-y: auto;
     position: fixed;
+    top: 0;
     bottom: 0;
     right: 0;
     z-index: 1000;
